# vire

./: .dockerignore  .env.example  .gitignore  DESIGN_SYSTEM.md  DESIGN_SYSTEM_IMPROVEMENT.md  DESIGN_SYSTEM_REFINE.md  Dockerfile  FEATURES.md  README.md  ROADMAP.md  content-security-policy.mjs  docker-compose.override.yml  docker-compose.yml  docker-entrypoint.sh  lighthouserc.json  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  playwright.ux.config.ts  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts  vitest.functional.config.ts
app/: global-error.tsx  globals.css  layout.tsx  manifest.ts  robots.ts  sitemap.ts
apps/vire-checker/src-tauri/: Cargo.toml  tauri.conf.json
apps/vire-checker/src-tauri/src/: main.rs
components/: BackgroundCanvas.tsx  Footer.tsx  NavBar.tsx
data/: README-reference-laptops.md  apps.json  components.json  reference-laptops.json
docs/: api-public.md  calendly-booking.md  ci.md  model-search.md  operations.md  phases-implementation-notes.md  repository-layout.md  site-pages.md  sitemap-routes.md
e2e/: a11y-axe.spec.ts  admin-checks.spec.ts  admin-locale.spec.ts  admin-login.spec.ts  admin-orders-overview.spec.ts  db-availability.ts  experience-pages.spec.ts  public-routes.spec.ts  smoke.spec.ts  support-contact.spec.ts  ux-flow.spec.ts  wizard-contact-validation.spec.ts  wizard-order-admin.spec.ts  wizard-order.spec.ts
i18n/: routing.ts
lib/: auth-options.ts  compatibility.ts  email.ts  guide-content.ts  guide-mdx.ts  require-admin.ts  stripe.ts  try-linux-novnc.ts
(+324 files in other folders)
