[package]
name = "vire-checker"
version = "0.1.0"
description = "Vire Checker — local compatibility check (same logic as the web app)"
authors = ["Vire"]
edition = "2021"

[lib]
name = "vire_checker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
